Mission creation, viewing, deleting in database
